tests/fixtures/invalid/bytes_neg.py
# Cannot use unary - on Bytes
x: bytes = -b"hello"
